--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # Utils
   equatable: ^2.0.3
   flutter_easyloading: ^3.0.3
+  shared_preferences: ^2.0.12
 
   # localizetion
   intl: ^0.17.0
