--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -33,3 +33,6 @@ android.enableJetifier=true
 FLIPPER_VERSION=0.99.0
 org.gradle.jvmargs=-Xmx1536M --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
 
+MATTERMOST_RELEASE_STORE_FILE=mm-key.jks
+MATTERMOST_RELEASE_KEY_ALIAS=mm-key
+MATTERMOST_RELEASE_PASSWORD=mm-key
